--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 * { /* reset css: apaga as configurações pré-definidas do navegador */
     margin: 0;
     padding: 0;
+    outline: 0;
     box-sizing: border-box;
     text-decoration: none;
 }
